--- a/exercises/08-Split-Screen-in-three/styles.css
+++ b/exercises/08-Split-Screen-in-three/styles.css
@@ -1,17 +1,26 @@
 body {
-  margin: 0;
+	margin: 0;
 }
-
+.wrapper {
+	display: flex;
+	width: 100%;
+	flex-direction: row;
+}
 .boxA {
-  background: #4682B4; 
-
+  
+	background: #4682b4;
+	width: 33.33%;
+	height: 100px;
 }
 
 .boxB {
-  background: #A9A9A9; 
-
+	background: #a9a9a9;
+	width: 33.33%;
+	height: 100px;
 }
 
 .boxC {
-  background: #FFA500; 
+	background: #ffa500;
+	width: 33.33%;
+	height: 100px;
 }
