--- a/exercises/09.2-Calendar-icon/styles.css
+++ b/exercises/09.2-Calendar-icon/styles.css
@@ -16,32 +16,49 @@
 	display: block;
 	font-size: 15px;
 	color: #fff;
-	background: #04599a;
 	border-bottom-right-radius: 3px;
 	border-bottom-left-radius: 3px;
+	position: absolute;
 }
 
-.calendar::before, .calendar:after{
-	content:'';
-	float:left;
-	width:8px;
-	height:8px;
-	background:#111;
-	z-index:1;
-	border-radius:10px;
-	box-shadow:0 1px 1px #fff;
-	}
-.calendar::before{left:11px;}	
-.calendar::after{right:11px;}
+.calendar::before,
+.calendar:after {
+	position: absolute;
+	content: "";
+	float: left;
+	width: 8px;
+	height: 8px;
+	background: #111;
+	z-index: 1;
+	border-radius: 10px;
+	box-shadow: 0 1px 1px #fff;
+}
+.calendar::before {
+	left: 11px;
+}
+.calendar::after {
+	right: 11px;
+}
 
-.calendar em::before, .calendar em::after{
-	content:'';
+.calendar em::before,
+.calendar em::after {
+	content: "";
 	float: left;
 	margin: 10px;
-	width:4px;
-	height:14px;
-	background:blue;
-	z-index:2;
-	}
-.calendar em::before{left:13px;}	
-.calendar em::after{right:13px;}	
+	width: 4px;
+	height: 14px;
+	background: lightgrey;
+	z-index: 2;
+	position: absolute;
+}
+.calendar em::before {
+	left: 53px;
+	top: -82px;
+	position: absolute;
+}
+.calendar em::after {
+	right: -27px;
+	top: -82px;
+	position: absolute;
+	border-radius: 20%;
+}
