--- a/exercises/10-static-layout/styles.css
+++ b/exercises/10-static-layout/styles.css
@@ -1,4 +1,22 @@
-/* your code here */
+.wrapper {
+	margin: 10px;
+}
+header {
+	width: 100%;
+}
+.secondWrapper {
+	display: flex;
+	margin: 10 px;
+}
+.secondWrapper section {
+	width: 80%;
+	height: 100vh;
+}
+.secondWrapper nav {
+	width: 20%;
+	margin-right: 10px;
+	height: 100vh;
+}
 
 /**************************************
 DON'T CHANGE ANYTHING AFTER THIS LINE
